--- a/rivo/css/styles.css
+++ b/rivo/css/styles.css
@@ -37,6 +37,14 @@ i{
     font-size: 1.5rem;
     transition: all 0.5s;
 }
+.makeshift_icon_svg{
+    width: 1.75rem;
+    fill: whitesmoke;
+}
+button{
+    cursor: pointer;
+    background-color: #ffffff00;
+}
 .icon_title{
     display: flex;
     justify-content: center;
@@ -57,7 +65,7 @@ i{
     height: 7vh;
 }
 #nombre, #menu{
-    gap: 1.5rem;
+    gap: 0.5rem;
 }
 #personal {
     display: none;
@@ -96,7 +104,7 @@ i{
     width: 78%;
     height: 78%; 
 }
-svg{
+#logo svg{
     width: 100%;
     height: 100%;
     fill: var(--neon);
@@ -117,7 +125,6 @@ svg{
     opacity: 1;
     transition: all 1s;
     padding: 0.3rem;
-    gap: 1.5rem;
     font-family: 'Fira Sans';
     font-size: 1.2rem;
     display: flex;
@@ -125,13 +132,16 @@ svg{
     justify-content: space-between;
 }
 #menu > *{
-    padding-inline: 1rem;
+    padding-inline: 0.5rem;
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 10rem;
     font-size: 1.2rem;
     white-space: nowrap;
+}
+#responsive_menu_button{
+    aspect-ratio: 1;
+    transition: all 0.3s;
 }
 .deplegable_titulo{
     gap: 0.5rem;
@@ -160,6 +170,9 @@ svg{
 }
 .siglas{
     letter-spacing: 0.2rem;
+}
+.app_hover{
+    color: whitesmoke;
 }
 .app_hover:hover{
     transition: all 0.4s;
