--- a/rivo/css/styles.css
+++ b/rivo/css/styles.css
@@ -1,9 +1,11 @@
 
 :root {
+    font-size: 16px;
     --gris_fondo2: rgb(46, 46, 46);
     --gris_fondo: #1f1f1f;
-    --white:whitesmoke;
+    --white:whitesmoke; 
     --azul: #4576ff;
+    --azul_fade: #2a4693;
     --celeste: #a1ffeb;
     --neon: #2897ff;
 }
@@ -14,6 +16,13 @@ body{
     background-color: var(--gris_fondo2);
     color: var(--white);
     font-family: 'Raleway';
+}
+p{
+    font-family: 'Raleway';
+    font-weight: 400;
+    font-size: 1.2rem;
+    letter-spacing: 0.03rem;
+    line-height: 1.2;
 }
 main section:first-child {
     padding-top: 7vh;
@@ -33,6 +42,9 @@ h4{
     font-size: 1.5rem;
     letter-spacing: 0.05rem;
 }
+img{
+    width: 100%;
+}
 i{
     font-size: 1.5rem;
     transition: all 0.5s;
@@ -45,6 +57,74 @@ button{
     cursor: pointer;
     background-color: #ffffff00;
 }
+.hex_app_button{
+    align-self: center;
+    position: relative;
+    color: whitesmoke;
+    font-size: 1.2rem;
+    padding: 0.5rem;
+    padding-inline: 1.5rem;
+    transition: all 0.25s;
+    font-size: 1rem;
+    width: 1.5rem;
+    aspect-ratio: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.hex_app_button::after{
+    pointer-events: none;
+    content: '⬣';
+    position: absolute;
+    color: var(--azul);
+    transition: all 0.3s ease;
+    font-size: 4rem;
+    z-index: -1;
+}
+.hex_app_button:hover::after{
+    color: whitesmoke;
+    scale: 1.25;
+}
+.hex_app_button:hover{
+    color: black;
+}
+
+.app_color_button{
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    color: whitesmoke;
+    font-size: 1.2rem;
+    padding: 0.25rem;
+    padding-inline: 1.5rem;
+    border-radius: 0.6rem;
+    transition: all 0.25s ease;
+    overflow: hidden;
+
+}
+.app_color_button::after{
+    content: '';
+    position: absolute;
+    width: 70%;
+    aspect-ratio: 1;
+    background-color: var(--azul);
+    rotate: 45deg;
+    z-index: -1;
+    transition: all 0.25s ease;
+}
+.app_color_button:hover::after{
+    background-color: var(--azul_fade);
+}
+.app_color_button:hover{
+    color: black;
+}
+.dislay_none{
+    display: none;
+}
+
 .icon_title{
     display: flex;
     justify-content: center;
@@ -54,7 +134,7 @@ button{
 }
 #nav{
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     background-color: var(--gris_fondo);
     padding-inline: 2rem;
     position: fixed;
@@ -64,12 +144,11 @@ button{
     z-index: 1000;
     height: 7vh;
 }
-#nombre, #menu{
+#nombre, #desktop_menu{
     gap: 0.5rem;
 }
 #personal {
-    display: none;
-    opacity: 0;
+    display: flex;
     justify-content: center;
     align-items: center;
     transition: all 1s;
@@ -84,7 +163,8 @@ button{
     letter-spacing: 0.1rem;
     font-family: 'Raleway';
     font-weight: 500;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
+    gap: 1rem;
 }
 #logo{
     width: 3rem;
@@ -121,27 +201,32 @@ button{
     z-index: -1;
     border-radius: 5rem;
 }
-#menu{
-    opacity: 1;
+#desktop_menu{
     transition: all 1s;
     padding: 0.3rem;
     font-family: 'Fira Sans';
-    font-size: 1.2rem;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
-#menu > *{
+#desktop_menu > *{
     padding-inline: 0.5rem;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
+    letter-spacing: 0.025rem;
     white-space: nowrap;
 }
 #responsive_menu_button{
+    display: none;
     aspect-ratio: 1;
     transition: all 0.3s;
+}
+.centered_elements{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .deplegable_titulo{
     gap: 0.5rem;
@@ -189,12 +274,14 @@ button{
     align-items: center;
     overflow: hidden;
     padding-right: 0;
+    gap: 5rem;
 }
 #introduce_myself article{
     position: relative;
     gap: 1rem;
     display: flex;
     flex-direction: column;
+    width: 50%;
 }
 #competencias{
     font-family: 'Varela Round';
@@ -215,29 +302,145 @@ button{
 }
 #introduce_myself .image_container{
     height: 100%;
-
 }
-.image_container svg{
+#introduce_myself::after {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    background-position: left;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+#introduce_myself .text_container{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+
+    padding-block: 5rem;
+    height: 100%;
+}
+#hexagon_image, .hex_text_container{
+    translate: 20%;
+}
+.text_content_box{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: flex-start;
+}
+.text_content_header{
+    font-weight: 400;
+}
+.text_content_box .app_color_button{
+    align-self: center;
+    margin-block: 1rem;
+}
+.hex_text_container {
+    margin-left: 5rem;
+    height: 60%;
+    width: 70%;
+    text-align: justify;
+}
+#hexagon_image{
+    pointer-events: none;
+    position: absolute;
+    top: 0;
+    left: 0;
     aspect-ratio: 1;
     fill: var(--neon);
     scale: 1.5;
-    translate: 10%;
+    animation: entrance 1s ease, rotation 175s linear infinite;
+}
+#hexagon_image::before{
+    content: '';
+    position: absolute;
+    inset: 20%;
+    background-image: url(../img/perfil3.png);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     animation: entrance 1s ease;
 }
-#introduce_myself .image_container{
+#introduce_myself .image_container::before {
 
 }
 #introduce_myself .image_container::before{
-    content: '';
     position: absolute;
-    inset: 15%;
-    top: 5%;
-    background-image: url("../img/perfil3.png");
-    background-size: 95%;
-    width: 78%;
-    height: 78%;
-
+    content: '';
+    inset: 20%;
+    background-image: radial-gradient(transparent 50%, black 90%), url(../img/portada.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     animation: entrance 1s ease;
+    border-radius: 50%;
+    aspect-ratio: 1;
+    outline: 0.1rem black solid;
+}
+.profile_window{
+    width: 100%;
+    height: 20rem;
+    background-image: url(../img/portada.jpg);
+    background-size: cover;
+    background-position: 20%;
+    background-repeat: no-repeat;
+}
+@media screen and (min-width: 1921px) {
+    :root {
+        font-size: 36px; /* Cambia el tamaño de fuente para pantallas más pequeñas */
+    }
+}
+@media screen and (max-width: 1920px) {
+    :root {
+        font-size: 16px; /* Cambia el tamaño de fuente para pantallas más pequeñas */
+    }
+}
+
+@media screen and (max-width: 1300px) {
+    :root {
+        font-size: 14px; /* Cambia el tamaño de fuente para pantallas más pequeñas */
+    }
+}
+
+@media screen and (max-width: 1080px) {
+    :root {
+        font-size: 12px; /* Cambia el tamaño de fuente para pantallas más pequeñas */
+    }
+    #responsive_menu_button{
+        display: none;
+    }
+    #desktop_menu{
+        display: flex;
+    }
+    #introduce_myself{
+        flex-direction: column;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    :root {
+        font-size: 12px; /* Cambia el tamaño de fuente para pantallas más pequeñas */
+    }
+    #responsive_menu_button{
+        display: flex;
+    }
+    #desktop_menu{
+        display: none;
+    }
+    #nav{
+        padding-right: 0;
+    }
+    
+}
+
+@media screen and (max-width: 400px){
+    :root {
+        font-size: 12px; /* Cambia el tamaño de fuente para pantallas más pequeñas */
+    }
+    #nav{
+        padding-left: 1rem;
+    }
 }
 @keyframes entrance {
     from{
@@ -247,5 +450,13 @@ button{
     to{
         transform: translate(0);
         opacity: 1;
+    }
+}
+@keyframes rotation {
+    from{
+        rotate: 0deg;
+    }
+    to{
+        rotate: 360deg;
     }
 }
