--- a/view/index.html
+++ b/view/index.html
@@ -4,15 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rivo | Portfolio</title>
-    <link rel="stylesheet" href="../css/normalize.css">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../public/css/normalize.css">
+    <link rel="stylesheet" href="../public/css/styles.css">
     <script src="../js/portfolio.js"></script>
-
-    <link rel="stylesheet" href="../font-awesome-4.7.0/css/font-awesome.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.2.0/fonts/remixicon.css" rel="stylesheet">
-
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;200;300;400;500;600;700;800;900&family=Montserrat:wght@300&family=Outfit&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,800;0,900;1,500;1,600;1,700&family=Roboto&family=Varela+Round&display=swap" rel="stylesheet">
 </head>
 <body>
     <header id="nav">
@@ -105,4 +99,9 @@
 <script>
     initPortfolio()
 </script>
+<link rel="stylesheet" href="../font-awesome-4.7.0/css/font-awesome.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.2.0/fonts/remixicon.css" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;200;300;400;500;600;700;800;900&family=Montserrat:wght@300&family=Outfit&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,800;0,900;1,500;1,600;1,700&family=Roboto&family=Varela+Round&display=swap" rel="stylesheet">
 </html>
