--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,5 +1,6 @@
 
 :root {
+    
     font-size: 16px;
     --gris_fondo2: rgb(46, 46, 46);
     --gris_fondo: #1f1f1f;
@@ -8,6 +9,7 @@
     --azul_fade: #2a4693;
     --celeste: #a1ffeb;
     --neon: #2897ff;
+    color: var(--white);
 }
 html {
     scroll-behavior: smooth;
@@ -23,10 +25,6 @@ p{
     font-size: 1.2rem;
     letter-spacing: 0.03rem;
     line-height: 1.2;
-}
-main section:first-child {
-}
-section{
 }
 h2{
     font-family: 'Raleway';
@@ -47,11 +45,7 @@ h4{
     font-size: 1.5rem;
     letter-spacing: 0.05rem;
 }
-.double_title {
-    
-}
 .double_title :first-child{
-    margin-bottom: 0.25rem;
     transform: translate(-1rem);
 }
 img{
@@ -68,6 +62,21 @@ i{
 button{
     cursor: pointer;
     background-color: #ffffff00;
+}
+/* section{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    min-width: 100vw;
+    padding-block: 3rem;
+} */
+article{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    gap: 0.5rem;
 }
 .hex_app_button{
     align-self: center;
@@ -145,32 +154,11 @@ button{
     gap: 0.5rem;
 }
 #nav{
-    display: flex;
-    justify-content: space-between;
     background-color: var(--gris_fondo);
-    padding-inline: 2rem;
-    position: fixed;
-    width: 100%;
     transition: all 1s;
     color: whitesmoke;
-    z-index: 1000;
-    padding-block: 0.5rem;
-}
-#nombre, #desktop_menu{
-    gap: 0.5rem;
-}
-#personal {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: all 1s;
 }
 #nombre{
-    display: flex;
-    flex-direction: row;
-    text-align: left;
-    align-items: center;
-    justify-content: start;
     font-family: 'Fire Sans';
     letter-spacing: 0.1rem;
     font-family: 'Raleway';
@@ -181,9 +169,6 @@ button{
 #logo{
     width: 3rem;
     aspect-ratio: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     position: relative;
     z-index: 0;
 }
@@ -276,11 +261,8 @@ button{
     transition: all 0.4s;
     color: var(--azul);
 }
-.full_section{
-    height: 100svh;
-}
 
-#introduce_myself{
+/* #introduce_myself{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -295,7 +277,7 @@ button{
     display: flex;
     flex-direction: column;
     width: 50%;
-}
+} */
 #competencias{
     font-family: 'Varela Round';
     display: flex;
@@ -324,16 +306,6 @@ button{
     background-size: contain;
     background-repeat: no-repeat;
 }
-#introduce_myself .text_container{
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    height: 100%;
-}
-#hexagon_image, .hex_text_container{
-    translate: 20%;
-}
 .text_content_box{
     display: flex;
     flex-direction: column;
@@ -346,12 +318,6 @@ button{
 .text_content_box .app_color_button{
     align-self: center;
     margin-block: 1rem;
-}
-.hex_text_container {
-    margin-left: 5rem;
-    height: 60%;
-    width: 70%;
-    text-align: justify;
 }
 #hexagon_image{
     pointer-events: none;
@@ -373,8 +339,10 @@ button{
     background-repeat: no-repeat;
     animation: entrance 1s ease;
 }
-#introduce_myself .image_container::before {
-
+.divider{
+    border-radius: 1rem;
+    border-top: 0.4rem solid orange;
+    margin-inline: 20%;
 }
 #introduce_myself .image_container::before{
     position: absolute;
@@ -396,7 +364,7 @@ button{
     background-size: contain;
     background-position: 20%;
     background-repeat: no-repeat;
-} 
+}
 @media screen and (min-width: 1921px) {
     :root {
         font-size: 36px; /* Cambia el tamaño de fuente para pantallas más pequeñas */
@@ -438,9 +406,6 @@ button{
     }
     #desktop_menu{
         display: none;
-    }
-    #nav{
-        padding-inline: 1rem;
     }
     
 }
