--- a/view/index.html
+++ b/view/index.html
@@ -4,14 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rivo | Portfolio</title>
+
+    <!-- Normalize-->
     <link rel="stylesheet" href="../public/css/normalize.css">
+
+    <!-- Bootstrap-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script> -->
+
+    <!-- Custom CSS-->
     <link rel="stylesheet" href="../public/css/styles.css">
 </head>
 <body>
-    <header id="nav">
-        <aside id="personal">
-            <a href="" id="nombre" class="app_hover">
-                <div id="logo" class="halo">
+    <header id="nav" class="fixed-top d-flex justify-content-between px-3 py-2">
+        <aside>
+            <a href="" id="nombre" class="d-flex flex-row align-items-center justify-content-start app_hover
+            ">
+                <div id="logo" class="halo d-flex align-items-center justify-content-center">
                     <svg class="app_svg app_hover" fill="#000000" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="800px" height="800px" viewBox="0 0 485.688 485.688" xml:space="preserve">
                         <g>
                             <g>
@@ -25,7 +36,7 @@
                 Rivo José · Portfolio
             </a>
         </aside>
-        <div id="desktop_menu">
+        <!-- <div id="desktop_menu">
             <button class="desplegable">
                 <a href="#" class="deplegable_titulo icon_title app_hover">Mis estudios
                     <i data_icon_name="arrow_up"></i>
@@ -40,15 +51,16 @@
                 <div class="deplegable_titulo app_hover">Mis proyectos</div>
                 <polygon fill="#213C45" points="180.745,294.673 189.226,299.762 216.677,299.762 216.677,103.068 180.745,124.628   " />
             </a>
-        </div>
+        </div> -->
         <button id="responsive_menu_button" class="centered_elements app_hover">
             <i data_icon_name="burger_menu"></i>
         </button>
     </header>
-    <main>
-        <section id="introduce_myself" class="full_section gradient_background">
-            <article class="text_container">
-                <div class="double_title">
+    
+    <main class="">  
+        <section class="row">
+            <article class="col">
+                <div class="">
                     <h3 class="code_reveal_effect">Hola, soy</h3>
                     <h2 class="code_reveal_effect">Rivo José</h2>
                 </div>
@@ -57,25 +69,10 @@
                     <div class="portrait"></div>
                 </div>
 
-                <h4 class="code_reveal_effect">Desarrollo de aplicaciones web</h4>
-                <div id="competencias">
-                    <div class="competencia icon_title">
-                        <i data_icon_name="html5"></i>HTML5
-                    </div>
-                    <div class="competencia icon_title">
-                        <i data_icon_name="css3"></i>CSS3
-                    </div>
-                    <div class="competencia icon_title"> 
-                        <svg class="makeshift_icon_svg" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 30 30">
-                            <path d="M 17.662109 -0.015625 C 19.190109 3.063375 12.191016 4.9633437 11.541016 7.5273438 C 10.946016 9.8833438 15.696172 12.621094 15.701172 12.621094 C 14.979172 11.647094 14.457422 10.842219 13.732422 9.3242188 C 12.506422 6.7572187 20.966109 4.108375 17.662109 -0.015625 z M 22.722656 4.1972656 C 22.722656 4.1972656 17.386281 4.5194844 17.113281 7.7714844 C 16.992281 9.2194844 18.515594 9.992875 18.558594 11.046875 C 18.595594 11.907875 17.648438 12.623047 17.648438 12.623047 C 17.648438 12.623047 19.211047 12.383312 19.748047 11.070312 C 20.342047 9.6143125 18.747781 8.5517656 18.925781 7.3847656 C 19.095781 6.2687656 22.722656 4.1972656 22.722656 4.1972656 z M 12.761719 12.623047 C 12.761719 12.623047 7.2773438 12.550172 7.2773438 14.076172 C 7.2763438 15.671172 14.457938 15.782734 19.585938 14.802734 C 19.585938 14.802734 20.749281 14.165266 21.113281 13.822266 C 17.753281 14.495266 10.287109 14.300797 10.287109 13.716797 C 10.287109 13.178797 12.761719 12.623047 12.761719 12.623047 z M 23.681641 12.664062 C 23.07915 12.638797 22.419687 12.830578 21.851562 13.236328 C 23.038563 12.979328 24.039063 13.709734 24.039062 14.552734 C 24.039062 16.446734 21.318359 18.240234 21.318359 18.240234 C 21.318359 18.240234 25.53125 17.755625 25.53125 14.640625 C 25.53125 13.354375 24.685791 12.706172 23.681641 12.664062 z M 10.816406 15.431641 C 9.9584062 15.430641 8.6816406 16.111625 8.6816406 16.765625 C 8.6816406 18.081625 15.136062 19.095828 19.914062 17.173828 L 18.259766 16.132812 C 15.020766 17.195812 9.0484062 16.854641 10.816406 15.431641 z M 12.029297 18.238281 C 10.850297 18.238281 10.085938 19.031328 10.085938 19.611328 C 10.085938 21.407328 17.124062 21.468578 19.914062 19.642578 L 18.140625 18.537109 C 16.058625 19.492109 10.824297 19.622281 12.029297 18.238281 z M 6.9199219 20.990234 C 5.2392793 20.937557 4.46875 21.796297 4.46875 22.498047 C 4.46875 26.228047 22.722656 26.049328 22.722656 22.236328 C 22.722656 21.603328 22.017719 21.302203 21.761719 21.158203 C 23.251719 24.803203 6.6503906 24.553344 6.6503906 22.402344 C 6.6503906 21.912344 7.5294375 21.412625 8.6484375 21.640625 C 8.6484375 21.640625 8.2382656 21.164312 7.6972656 21.070312 C 7.4196406 21.022437 7.1600137 20.99776 6.9199219 20.990234 z M 25.53125 23.794922 C 22.63425 26.630922 14.659344 28.352563 7.2773438 26.601562 C 14.694344 29.607563 25.49625 27.275922 25.53125 23.794922 z"></path>
-                        </svg>Java
-                    </div>
-                    <div class="competencia icon_title">
-                        <svg class="makeshift_icon_svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M13.3344 16.055 12.4764 17.243C13.2904 17.969 14.3024 18.332 15.5124 18.332 16.4364 18.31 17.1404 18.0717 17.6244 17.617 18.1157 17.155 18.3614 16.605 18.3614 15.967 18.3614 15.3437 18.1891 14.8303 17.8444 14.427 17.4997 14.0237 16.9204 13.701 16.1064 13.459 15.4317 13.2537 14.9551 13.0667 14.6764 12.898 14.3977 12.722 14.2584 12.5093 14.2584 12.26 14.2584 12.0327 14.3721 11.8493 14.5994 11.71 14.8267 11.5707 15.1311 11.501 15.5124 11.501 15.7911 11.501 16.1064 11.556 16.4584 11.666 16.8104 11.7613 17.1221 11.9153 17.3934 12.128L18.1634 10.929C17.4887 10.3863 16.5941 10.115 15.4794 10.115 14.6801 10.115 14.0237 10.3203 13.5104 10.731 12.9824 11.1417 12.7184 11.6513 12.7184 12.26 12.7257 12.9053 12.9384 13.4077 13.3564 13.767 13.7817 14.1263 14.3867 14.4197 15.1714 14.647 15.8241 14.8523 16.2677 15.0577 16.5024 15.263 16.7297 15.4683 16.8434 15.7177 16.8434 16.011 16.8434 16.297 16.7297 16.517 16.5024 16.671 16.2677 16.8323 15.9304 16.913 15.4904 16.913 14.7717 16.9203 14.0531 16.6343 13.3344 16.055ZM7.80405 16.693C7.58405 16.561 7.37872 16.3667 7.18805 16.11L6.15405 16.957C6.46205 17.4777 6.84339 17.8407 7.29805 18.046 7.72339 18.2367 8.21105 18.332 8.76105 18.332 9.06172 18.332 9.37339 18.2843 9.69605 18.189 10.0187 18.0937 10.3157 17.9323 10.5871 17.705 11.0637 17.3237 11.3131 16.7003 11.3351 15.835V10.247H9.85005V15.549C9.85005 16.055 9.73639 16.4107 9.50905 16.616 9.28172 16.814 8.99572 16.913 8.65105 16.913 8.32105 16.913 8.03872 16.8397 7.80405 16.693ZM3 6C3 4.34315 4.34315 3 6 3H18C19.6569 3 21 4.34315 21 6V18C21 19.6569 19.6569 21 18 21H6C4.34315 21 3 19.6569 3 18V6ZM6 5C5.44772 5 5 5.44772 5 6V18C5 18.5523 5.44772 19 6 19H18C18.5523 19 19 18.5523 19 18V6C19 5.44772 18.5523 5 18 5H6Z"></path></svg>JavaScript
-                    </div>
-                </div>
+                <h4>Desarrollador de aplicaciones web</h4>
             </article>
-            <article class="text_container">
+            
+            <!-- <article class="text_container">
                 <div class="hex_text_container text_content_box">
                     <h4 class="code_reveal_effect text_content_header"> Mi portafolio</h4>
                     <p class="code_reveal_effect">Hola, en este portafolio puedes encontrar un repositorio de mis proyectos, reflexiones y trabajos luego de cursar DAW en el Centro San Luis. Así como algo de información personal y algunas pequeñas demos.</p>
@@ -94,12 +91,10 @@
                         </g>
                     </g>
                 </svg>
-            </article>
+            </article> -->
         </section>
-        <section id="introduce_myself" class="full_section"></section>
+        <div class="divider"></div>
     </main>
-    <footer>
-    </footer>
 </body>
 <script src="../public/js/Icons.js"></script>
 <script src="../public/js/portfolio.js"></script>
@@ -107,14 +102,6 @@
     document.addEventListener('DOMContentLoaded', function() {
         initPortfolio();
     });
-
-    SetNavOffSet();
-    function SetNavOffSet(){
-        const nav = document.getElementById('nav');
-        const alturaNav = nav.offsetHeight;
-
-        document.querySelector('section').style.paddingTop = `${alturaNav}px`;
-    }
 </script>
 <link rel="stylesheet" href="../font-awesome-4.7.0/css/font-awesome.min.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.2.0/fonts/remixicon.css" rel="stylesheet">
