--- a/view/index.html
+++ b/view/index.html
@@ -5,14 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rivo | Portfolio</title>
 
+    <!-- Bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+   
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
     <!-- Normalize-->
     <link rel="stylesheet" href="../public/css/normalize.css">
-
-    <!-- Bootstrap-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script> -->
 
     <!-- Custom CSS-->
     <link rel="stylesheet" href="../public/css/styles.css">
@@ -57,10 +59,10 @@
         </button>
     </header>
     
-    <main class="">  
-        <section class="row">
-            <article class="col">
-                <div class="">
+    <main class="d-flex flex-column justify-content-center align-items-center">  
+        <section class="row px-4 py-5">
+            <article class="col-12">
+                <div class="double_title px-5">
                     <h3 class="code_reveal_effect">Hola, soy</h3>
                     <h2 class="code_reveal_effect">Rivo José</h2>
                 </div>
@@ -69,9 +71,8 @@
                     <div class="portrait"></div>
                 </div>
 
-                <h4>Desarrollador de aplicaciones web</h4>
+                <h4 class="py-4 px-5 text-center">Desarrollador de aplicaciones web</h4>
             </article>
-            
             <!-- <article class="text_container">
                 <div class="hex_text_container text_content_box">
                     <h4 class="code_reveal_effect text_content_header"> Mi portafolio</h4>
@@ -93,7 +94,30 @@
                 </svg>
             </article> -->
         </section>
+        
         <div class="divider"></div>
+
+        <section class="row">
+            <h2 class="text-center py-5">Competencias</h2>
+
+            <article class="row gx-0">
+                <div class="col-6 text-center">
+                    <h3 class="">Lenguaje de marca</h3>
+                    <a href="#">
+                        <img src="../public/img/perfil2.png">
+                    </a>
+                </div>
+
+            </article>
+
+            <h2 class="text-center py-5">Competencias</h2>
+            <!-- <button class="hex_app_button" link_scroll_to="section_2">
+                <i data_icon_name="arrow_down"></i>
+            </button>
+            <button class="app_color_button" link_scroll_to="section_2">
+                <i data_icon_name="arrow_down"></i> THIS IS A TEST BUTTON
+            </button> -->
+        </section>
     </main>
 </body>
 <script src="../public/js/Icons.js"></script>
