--- a/view/index.html
+++ b/view/index.html
@@ -100,7 +100,13 @@
         <section class="row">
             <h2 class="text-center py-5">Competencias</h2>
 
-            <article class="row gx-0">
+            <article class="row container-fluid">
+                <div class="col-6 text-center">
+                    <h3 class="">Lenguaje de marca</h3>
+                    <a href="#">
+                        <img src="../public/img/perfil2.png">
+                    </a>
+                </div>
                 <div class="col-6 text-center">
                     <h3 class="">Lenguaje de marca</h3>
                     <a href="#">
