--- a/view/index.html
+++ b/view/index.html
@@ -59,8 +59,8 @@
         </button>
     </header>
     
-    <main class="d-flex flex-column justify-content-center align-items-center">  
-        <section class="row px-4 py-5">
+    <main class="container-fluid d-flex flex-column justify-content-center align-items-center">  
+        <section class="row py-5">
             <article class="col-12">
                 <div class="double_title px-5">
                     <h3 class="code_reveal_effect">Hola, soy</h3>
@@ -97,32 +97,64 @@
         
         <div class="divider"></div>
 
-        <section class="row">
+        <section class="row justify-content-center">
             <h2 class="text-center py-5">Competencias</h2>
 
-            <article class="row container-fluid">
-                <div class="col-6 text-center">
+            <article class="row g-0 px-5">
+                <a href="#" class="col-6 text-center p-3 pb-5">
                     <h3 class="">Lenguaje de marca</h3>
-                    <a href="#">
-                        <img src="../public/img/perfil2.png">
-                    </a>
-                </div>
-                <div class="col-6 text-center">
-                    <h3 class="">Lenguaje de marca</h3>
-                    <a href="#">
-                        <img src="../public/img/perfil2.png">
-                    </a>
-                </div>
+                    <img src="../public/img/icon.png">
+                </a>
+                <a href="#" class="col-6 text-center p-3 pb-5">
+                    <h3 class="">Interfaces Web</h3>
+                    <img src="../public/img/icon.png">
+                </a>
+                <a href="#" class="col-6 text-center p-3 pb-5">
+                    <h3 class="">Bases de datos</h3>
+                    <img src="../public/img/icon.png">
+                </a>
+                <a href="#" class="col-6 text-center p-3 pb-5">
+                    <h3 class="">Entorno servidor</h3>
+                    <img src="../public/img/icon.png">
+                </a>
 
             </article>
 
-            <h2 class="text-center py-5">Competencias</h2>
+            <button class="app_color_button col-6" link_scroll_to="section_2">
+                <i data_icon_name="arrow_down"></i> Lenguajes
+            </button>
             <!-- <button class="hex_app_button" link_scroll_to="section_2">
                 <i data_icon_name="arrow_down"></i>
             </button>
-            <button class="app_color_button" link_scroll_to="section_2">
-                <i data_icon_name="arrow_down"></i> THIS IS A TEST BUTTON
-            </button> -->
+             -->
+
+        </section>
+        <div class="divider"></div>
+        <section class="row justify-content-center bg_gray_dark">
+            <h2 class="text-center py-5">Centro San Luis</h2>
+            <p class="p-5">
+                Actualmente me encuentro en FP superior en segundo de DAW, estudiando bajo el modelo Ethazi.
+
+                Ethazi es un modelo de aprendizaje basado en retos, en cual se presenta los alumnos un problema o proyecto, y durante el proceso de resolución del mismo he tenido la oportunidad de desarrollar tanto competencias tanto técnicas como transversales. 
+            </p>
+            <button class="app_color_button col-6 m-5">
+                2º DAW 2023-2024
+            </button>
+
+
+            
+        </section>
+        <img class=""
+            src="../public/img/csl_1.jpeg" alt="">
+        <div class="divider"></div>
+        <section class="row py-5">
+            <h2 class="text-center py-5">Competencias transversales</h2>
+            <p class="p-5">
+                Estas son algunas de las competencias transversales que se darrollan con el modelo de aprendizaje Ethazi:
+            </p>
+            <div class="carta_index">
+
+            </div>
         </section>
     </main>
 </body>
