--- a/view/index.html
+++ b/view/index.html
@@ -18,6 +18,7 @@
 
     <!-- Custom CSS-->
     <link rel="stylesheet" href="../public/css/styles.css">
+    <link rel="stylesheet" href="../public/css/index.css">
 </head>
 <body>
     <header id="nav" class="fixed-top d-flex justify-content-between px-3 py-2">
@@ -60,6 +61,25 @@
     </header>
     
     <main class="container-fluid d-flex flex-column justify-content-center align-items-center">  
+
+        <section class="row py-5 gy-5">
+            <h2 class="text-center py-5">Competencias transversales</h2>
+            <p class="p-5">
+                Estas son algunas de las competencias transversales que se darrollan con el modelo de aprendizaje Ethazi:
+            </p>
+
+            <div class="carta_index bg_gray_dark">
+                <div class="carta_index_img_container">
+                    <img src="../public/img/organizar.jpg" alt="">
+                </div>
+                
+                <div class="  p-4 carta_index_info">
+                    <h3 class="medium text-center">Compromiso</h3>
+                    <p class="py-3">Es necesario la participación y el debate en equipos, para dar solución los problemas que se nos plantean.</p>
+                </div>
+            </div>
+        </section>
+
         <section class="row py-5">
             <article class="col-12">
                 <div class="double_title px-5">
@@ -97,7 +117,7 @@
         
         <div class="divider"></div>
 
-        <section class="row justify-content-center">
+        <section class="row justify-content-center my-5">
             <h2 class="text-center py-5">Competencias</h2>
 
             <article class="row g-0 px-5">
@@ -121,7 +141,7 @@
             </article>
 
             <button class="app_color_button col-6" link_scroll_to="section_2">
-                <i data_icon_name="arrow_down"></i> Lenguajes
+                Lenguajes
             </button>
             <!-- <button class="hex_app_button" link_scroll_to="section_2">
                 <i data_icon_name="arrow_down"></i>
@@ -137,25 +157,15 @@
 
                 Ethazi es un modelo de aprendizaje basado en retos, en cual se presenta los alumnos un problema o proyecto, y durante el proceso de resolución del mismo he tenido la oportunidad de desarrollar tanto competencias tanto técnicas como transversales. 
             </p>
-            <button class="app_color_button col-6 m-5">
+            <button class="app_color_button col-8 m-5">
                 2º DAW 2023-2024
             </button>
-
-
-            
-        </section>
-        <img class=""
+            <img class="p-0 overflow_img"
             src="../public/img/csl_1.jpeg" alt="">
-        <div class="divider"></div>
-        <section class="row py-5">
-            <h2 class="text-center py-5">Competencias transversales</h2>
-            <p class="p-5">
-                Estas son algunas de las competencias transversales que se darrollan con el modelo de aprendizaje Ethazi:
-            </p>
-            <div class="carta_index">
-
-            </div>
+            <div class="divider"></div>
         </section>
+        
+        
     </main>
 </body>
 <script src="../public/js/Icons.js"></script>
