--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,5 @@
-
+/* variables colores */
 :root {
-    font-size: 16px;
     --gris_fondo2: rgb(46, 46, 46);
     --gris_fondo: #1f1f1f;
     
@@ -16,11 +15,30 @@
     --gray: #838383;
     --gray_dark: #353535;
     --black: #1F1F1F;
+
+    font-size: 16px;
     color: var(--white);
 }
 html {
     scroll-behavior: smooth;
 }
+/* font-sizes */
+.semibold{
+    font-weight: 600;
+}
+.medium{
+    font-weight: 500;
+}
+.regular{
+    font-weight: 400;
+}
+.light{
+    font-weight: 300;
+}
+.extralight{
+    font-weight: 200;
+}
+
 body{
     background-color: var(--black);
     color: var(--white);
@@ -58,6 +76,9 @@ h4{
 }
 img{
     width: 100%;
+}
+.overflow_img{
+    transform: scale(1.05);
 }
 i{
     font-size: 1.5rem;
@@ -105,7 +126,6 @@ button{
 
 .app_color_button{
     isolation: isolate;
-
     position: relative;
     display: flex;
     flex-direction: row;
@@ -113,14 +133,14 @@ button{
     align-items: center;
     gap: 1.5rem;
     color: whitesmoke;
-    padding: 0.25rem;
+    padding: 0.5rem;
     padding-inline: 1.5rem;
     border-radius: 0.6rem;
     transition: all 0.25s ease;
     overflow: hidden;
 
     font-family: 'Fira Sans';
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-weight: 400; /* regular */
 
 }
@@ -134,16 +154,14 @@ button{
     z-index: -1;
     transition: all 0.25s ease;
     /* forma diamante */
-    transform: scale(1,1.3) rotate(45deg)
-}
-.app_color_button:hover::after{
-    background-color: var(--azul_fade);
+    transform: scale(1,1.3) rotate(45deg);
 }
 .app_color_button:hover{
-    color: black;
+    scale: 1.1;
 }
-.dislay_none{
-    display: none;
+.app_color_button:hover::after{
+    background-color: var(--main_alt_dark);
+    border: 0.2rem solid white;
 }
 
 .icon_title{
@@ -323,13 +341,11 @@ button{
     background-repeat: no-repeat;
     animation: entrance 1s ease;
 }
-section{
-    padding-block: 5rem;
-}
 .divider{
     width: 60%;
     border-radius: 1rem;
     border-top: 0.5rem solid orange;
+    transform: translate(0, 50%);
 }
 #introduce_myself .image_container::before{
     position: absolute;
@@ -352,26 +368,39 @@ section{
     background-position: 20%;
     background-repeat: no-repeat;
 }
+
+/* media queries */ 
+/* pantallas mayores de 1921px */ 
 @media screen and (min-width: 1921px) {
     :root {
         font-size: 36px; /* Cambia el tamaño de fuente para pantallas más pequeñas */
     }
 }
+
 @media screen and (max-width: 1920px) {
     :root {
         font-size: 16px; /* Cambia el tamaño de fuente para pantallas más pequeñas */
     }
 }
 
-@media screen and (max-width: 1300px) {
+/* xl */
+@media screen and (max-width: 1400px) {
+    :root {
+        font-size: 16px; /* Cambia el tamaño de fuente para pantallas más pequeñas */
+    }
+}
+
+/* lg */
+@media screen and (max-width: 1200px) {
     :root {
         font-size: 14px; /* Cambia el tamaño de fuente para pantallas más pequeñas */
     }
 }
 
-@media screen and (max-width: 1080px) {
+/* md */
+@media screen and (max-width: 992px) {
     :root {
-        font-size: 12px; /* Cambia el tamaño de fuente para pantallas más pequeñas */
+        font-size: 14px; /* Cambia el tamaño de fuente para pantallas más pequeñas */
     }
     #responsive_menu_button{
         display: none;
@@ -384,9 +413,10 @@ section{
     }
 }
 
-@media screen and (max-width: 768px) {
+/* sm */
+@media screen and (max-width: 768px ) {
     :root {
-        font-size: 12px; /* Cambia el tamaño de fuente para pantallas más pequeñas */
+        font-size: 14px; /* Cambia el tamaño de fuente para pantallas más pequeñas */
     }
     #responsive_menu_button{
         display: flex;
@@ -397,9 +427,10 @@ section{
     
 }
 
-@media screen and (max-width: 400px){
+/* xs */
+@media screen and (max-width: 576px){
     :root {
-        font-size: 12px; /* Cambia el tamaño de fuente para pantallas más pequeñas */
+        font-size: 14px; /* Cambia el tamaño de fuente para pantallas más pequeñas */
     }
 }
 @keyframes entrance {
@@ -422,8 +453,6 @@ section{
 }
 
 /* generic */
-
-
 .main_bg {
     background-color: var(--main);
   }
