--- a/view/index.html
+++ b/view/index.html
@@ -5,18 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rivo | Portfolio</title>
 
-    <!-- Bootstrap-->
+    <!-- Google fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    <!-- Fira Sans, Montserrat, Varela Round -->
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;200;300;400;500;600;700;800;900&family=Montserrat:wght@300&family=Outfit&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,800;0,900;1,500;1,600;1,700&family=Roboto&family=Varela+Round&display=swap" rel="stylesheet">
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="../font-awesome-4.7.0/css/font-awesome.min.css">
+
+    <!-- Remixicon -->
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.2.0/fonts/remixicon.css" rel="stylesheet">
+
+    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-   
+    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
-    <!-- Normalize-->
+    <!-- Jquery JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+
+    <!-- Normalize CSS -->
     <link rel="stylesheet" href="../public/css/normalize.css">
 
-    <!-- Custom CSS-->
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="../public/css/styles.css">
     <link rel="stylesheet" href="../public/css/index.css">
 </head>
@@ -62,24 +76,6 @@
     
     <main class="container-fluid d-flex flex-column justify-content-center align-items-center">  
 
-        <section class="row py-5 gy-5">
-            <h2 class="text-center py-5">Competencias transversales</h2>
-            <p class="p-5">
-                Estas son algunas de las competencias transversales que se darrollan con el modelo de aprendizaje Ethazi:
-            </p>
-
-            <div class="carta_index bg_gray_dark">
-                <div class="carta_index_img_container">
-                    <img src="../public/img/organizar.jpg" alt="">
-                </div>
-                
-                <div class="  p-4 carta_index_info">
-                    <h3 class="medium text-center">Compromiso</h3>
-                    <p class="py-3">Es necesario la participación y el debate en equipos, para dar solución los problemas que se nos plantean.</p>
-                </div>
-            </div>
-        </section>
-
         <section class="row py-5">
             <article class="col-12">
                 <div class="double_title px-5">
@@ -122,20 +118,31 @@
 
             <article class="row g-0 px-5">
                 <a href="#" class="col-6 text-center p-3 pb-5">
-                    <h3 class="">Lenguaje de marca</h3>
-                    <img src="../public/img/icon.png">
+                    <h3 class="pb-3">Lenguaje de marca</h3>
+                    <svg style="scale: 0.85;"
+                        viewBox="0 0 512 512">
+                        <path
+                            d="M 11,475.5 V 448 H 38.5 66 V 475.5 503 H 38.5 11 Z m 435,0 V 448 H 473.5 501 V 475.5 503 H 473.5 446 Z m -352.545455,5.04545 c -2.999691,-2.99969 -3.131334,-6.41533 -0.381965,-9.91059 L 95.14516,468 h 160.75311 160.7531 l 2.17432,2.31445 c 2.88427,3.07017 2.77173,7.17904 -0.28024,10.231 L 416.09091,483 H 256 95.909091 Z M 118.5,427.12116 c -8.51906,-3.90794 -13.5,-11.65015 -13.5,-20.98397 0,-5.63673 3.29882,-13.65245 64.1144,-155.78984 35.26292,-82.41604 65.17243,-151.939319 66.46557,-154.496169 8.62469,-17.053022 32.23286,-17.053022 40.8335,0 1.28954,2.55685 31.04848,71.698819 66.13098,153.648819 69.30751,161.89697 66.75005,155.20341 63.02566,164.95559 -2.06795,5.41486 -9.05199,12.02919 -14.21541,13.46292 -8.85204,2.45795 -17.75703,0.11713 -23.75323,-6.24391 -2.22713,-2.36265 -8.85804,-16.7351 -23.52134,-50.98239 L 323.66027,323 H 256 188.33973 l -20.41986,47.69221 c -14.6633,34.24729 -21.29421,48.61974 -23.52134,50.98239 -6.48568,6.88031 -17.65328,9.2289 -25.89853,5.44656 z M 303.71799,276.25 c -0.22002,-0.4125 -10.93119,-25.3875 -23.8026,-55.5 C 267.04398,190.6375 256.28206,166 256,166 c -0.28206,0 -11.04398,24.6375 -23.91539,54.75 -12.87141,30.1125 -23.58258,55.0875 -23.8026,55.5 -0.22002,0.4125 21.25307,0.75 47.71799,0.75 26.46492,0 47.93801,-0.3375 47.71799,-0.75 z M 33.454545,418.54545 31,416.09091 V 256 95.909091 l 2.454545,-2.454546 c 3.128274,-3.128273 6.962636,-3.128273 10.09091,0 L 46,95.909091 V 256 416.09091 l -2.454545,2.45454 C 42.195455,419.89545 39.925,421 38.5,421 c -1.425,0 -3.695455,-1.10455 -5.045455,-2.45455 z m 435.000005,0 L 466,416.09091 V 256 95.909091 l 2.45455,-2.454546 c 2.99969,-2.999691 6.41533,-3.131334 9.91059,-0.381965 L 481,95.14516 V 256 416.85484 l -2.63486,2.07258 c -3.49526,2.74937 -6.9109,2.61773 -9.91059,-0.38197 z M 11,36.5 V 9 H 38.5 66 V 36.5 64 H 38.5 11 Z m 435,0 V 9 H 473.5 501 V 36.5 64 H 473.5 446 Z M 93.07258,41.365141 c -2.749369,-3.495256 -2.617726,-6.910904 0.381965,-9.910596 L 95.909091,29 H 256 416.09091 l 2.45454,2.454545 c 2.9997,2.999692 3.13134,6.41534 0.38197,9.910596 L 416.85484,44 H 256 95.14516 Z"
+                        />
+                    </svg>
                 </a>
                 <a href="#" class="col-6 text-center p-3 pb-5">
-                    <h3 class="">Interfaces Web</h3>
-                    <img src="../public/img/icon.png">
+                    <h3 class="pb-4">Interfaces Web</h3>
+                    <svg viewBox="0 0 122.88 101.9">
+                        <path d="M3.34,0h116.2a3.35,3.35,0,0,1,3.34,3.34v77a3.35,3.35,0,0,1-3.34,3.34H3.34A3.35,3.35,0,0,1,0,80.32v-77A3.35,3.35,0,0,1,3.34,0Zm46,62.5h.12l3.17-1.83a.22.22,0,0,0,.05-.08.08.08,0,0,0,0-.07l-3.47-6h0a.44.44,0,0,1-.06-.16.55.55,0,0,1,.43-.66l5.1-1.06h0a2.73,2.73,0,0,0,1.06-.44.65.65,0,0,0,.23-.29.25.25,0,0,0,0-.2,1.44,1.44,0,0,0-.45-.44L38.23,39.34l1.61,20.91a1.44,1.44,0,0,0,.15.61.26.26,0,0,0,.17.13.64.64,0,0,0,.36-.06,2.58,2.58,0,0,0,.91-.69l3.47-3.9h0a.53.53,0,0,1,.14-.12.57.57,0,0,1,.77.21l3.5,6a.09.09,0,0,0,.06,0Zm-30.77-39a1.29,1.29,0,0,0-1.29,1.42v2.69a1.29,1.29,0,0,0,2.2.92,1.26,1.26,0,0,0,.39-.92V26h1.29a1.29,1.29,0,1,0,0-2.58Zm1.29,9.28a1.29,1.29,0,0,0-2.2-.92,1.26,1.26,0,0,0-.39.92v2.59a1.29,1.29,0,0,0,2.2.92,1.26,1.26,0,0,0,.39-.92V32.74Zm0,7.76a1.3,1.3,0,0,0-2.2-.93,1.29,1.29,0,0,0-.39.93v2.58a1.3,1.3,0,0,0,2.2.93,1.29,1.29,0,0,0,.39-.93V40.5Zm0,7.75a1.3,1.3,0,0,0-2.2-.92,1.28,1.28,0,0,0-.39.92v2.59a1.3,1.3,0,1,0,2.59,0V48.25Zm0,7.76a1.29,1.29,0,0,0-2.2-.92,1.26,1.26,0,0,0-.39.92v2.36a1.3,1.3,0,0,0,1.3,1.35h.17a1.3,1.3,0,0,0,1.12-1.95V56Zm4.05,1.12a1.29,1.29,0,0,0-.92,2.2,1.26,1.26,0,0,0,.92.39h2.59a1.3,1.3,0,0,0,.92-2.2,1.26,1.26,0,0,0-.92-.39Zm7.76,0a1.3,1.3,0,0,0-.93,2.2,1.29,1.29,0,0,0,.93.39h2.58a1.66,1.66,0,0,0,.33,0l-.19-2.54H31.7ZM51,40.21a1.3,1.3,0,0,0,2.2.92,1.26,1.26,0,0,0,.39-.92V37.62a1.29,1.29,0,0,0-2.2-.92,1.26,1.26,0,0,0-.39.92v2.59Zm0-7.76a1.3,1.3,0,1,0,2.59,0V29.86a1.3,1.3,0,0,0-2.2-.92,1.28,1.28,0,0,0-.39.92v2.59ZM52.21,26a1.29,1.29,0,0,0,.92-2.19,1.26,1.26,0,0,0-.92-.39H49.62a1.29,1.29,0,0,0-.92,2.19,1.26,1.26,0,0,0,.92.39Zm-7.76,0a1.29,1.29,0,1,0,0-2.58H41.87a1.29,1.29,0,1,0,0,2.58ZM36.7,26a1.29,1.29,0,0,0,0-2.58H34.11a1.29,1.29,0,1,0,0,2.58Zm-7.76,0a1.29,1.29,0,0,0,.92-2.19,1.26,1.26,0,0,0-.92-.39H26.35a1.29,1.29,0,0,0-.92,2.19,1.26,1.26,0,0,0,.92.39ZM83,73.79c-.1-19.54-1.46-43.19,0-62.14H4.38V70.84a3,3,0,0,0,3,3Zm8.26-52.13a1.51,1.51,0,1,1,0-3h20.36a1.51,1.51,0,1,1,0,3Zm1.95,38.18h16.46A4.13,4.13,0,0,1,113.79,64h0a4.14,4.14,0,0,1-4.12,4.13H93.21A4.14,4.14,0,0,1,89.09,64h0a4.13,4.13,0,0,1,4.12-4.12Zm-2-6.91a1.51,1.51,0,0,1,0-3h20.48a1.51,1.51,0,0,1,0,3Zm.37-10.42a1.51,1.51,0,1,1,0-3h19.74a1.51,1.51,0,0,1,0,3Zm-.39-10.42a1.51,1.51,0,1,1,0-3H111.7a1.51,1.51,0,0,1,0,3Zm26.11,41.13V12.37H85.59V73.79h30a2.87,2.87,0,0,0,1.73-.57Zm-71,15h30.3c.08,5.24,2.24,9.94,8.09,13.63H38.2c4.71-3.41,8.11-7.54,8.09-13.63ZM113.8,4.92a2,2,0,1,1-2,2,2,2,0,0,1,2-2Zm-13.44,0a2,2,0,1,1-2,2,2,2,0,0,1,2-2Zm6.72,0a2,2,0,1,1-2,2,2,2,0,0,1,2-2Z"/>
+                    </svg>
                 </a>
                 <a href="#" class="col-6 text-center p-3 pb-5">
-                    <h3 class="">Bases de datos</h3>
-                    <img src="../public/img/icon.png">
+                    <h3 class="pb-4">Bases de datos</h3>
+                    <svg viewBox="0 0 60 60">
+                        <path d="M57,32H44V7c0-4.6-11.067-7-22-7S0,2.4,0,7V45c0,4.265,9.9,6.693,20,6.97V57a3,3,0,0,0,3,3H57a3,3,0,0,0,3-3V35A3,3,0,0,0,57,32ZM22,2C34.209,2,42,4.961,42,7s-7.791,5-20,5S2,9.039,2,7,9.791,2,22,2ZM2,10.1C5.674,12.67,13.872,14,22,14s16.326-1.33,20-3.9V20c0,2.039-7.791,5-20,5S2,22.039,2,20Zm0,13C5.674,25.67,13.872,27,22,27s16.326-1.33,20-3.9V32H23a3,3,0,0,0-3,3v2.965C8.828,37.66,2,34.92,2,33ZM2,45V36.116c3.443,2.407,10.817,3.664,18,3.857v9.989C8.828,49.656,2,46.918,2,45ZM58,57a1,1,0,0,1-1,1H23a1,1,0,0,1-1-1V35a1,1,0,0,1,1-1H57a1,1,0,0,1,1,1Z"/><path d="M40,39a4,4,0,0,0-4,4v6a4,4,0,0,0,4,4,3.947,3.947,0,0,0,2.019-.567l.274.274a1,1,0,0,0,1.414-1.414l-.274-.274A3.947,3.947,0,0,0,44,49V43A4,4,0,0,0,40,39Zm1.707,10.293a1,1,0,0,0-1.414,1.414l.218.218A1.96,1.96,0,0,1,40,51a2,2,0,0,1-2-2V43a2,2,0,0,1,4,0v6a1.96,1.96,0,0,1-.075.511Z"/><path d="M30,41a2,2,0,0,1,2,2,1,1,0,0,0,2,0,4,4,0,1,0-4,4,2,2,0,1,1-2,2,1,1,0,0,0-2,0,4,4,0,1,0,4-4,2,2,0,0,1,0-4Z"/><path d="M53,51H48V40a1,1,0,0,0-2,0V52a1,1,0,0,0,1,1h6a1,1,0,0,0,0-2Z"/>
+                    </svg>
                 </a>
                 <a href="#" class="col-6 text-center p-3 pb-5">
-                    <h3 class="">Entorno servidor</h3>
-                    <img src="../public/img/icon.png">
+                    <h3 class="pb-5">Entorno servidor</h3>
+                    <svg style="scale: 1.2;" viewBox="0 0 512 293.45">
+                        <path d="M12.93 267.59h47.76c-1.56-1.62-2.53-3.81-2.53-6.22V8.97C58.16 4.04 62.2 0 67.13 0h375.38c4.93 0 8.97 4.04 8.97 8.97v252.4c0 2.41-.97 4.6-2.53 6.22h50.12c3.56 0 6.8 1.45 9.14 3.79a12.903 12.903 0 0 1 0 18.27c-2.34 2.34-5.58 3.8-9.14 3.8H12.93c-3.56 0-6.8-1.46-9.14-3.8a12.903 12.903 0 0 1 0-18.27c2.34-2.34 5.58-3.79 9.14-3.79zM339 181.33c.67-2.91 3.59-4.72 6.5-4.05 2.91.68 4.72 3.59 4.05 6.51l-10.59 45.34a5.412 5.412 0 0 1-6.5 4.04 5.406 5.406 0 0 1-4.05-6.5L339 181.33zM97.79 82.82c-3.52 0-6.37-2.85-6.37-6.37 0-3.51 2.85-6.37 6.37-6.37h160.46c3.51 0 6.36 2.86 6.36 6.37 0 3.52-2.85 6.37-6.36 6.37H97.79zm0 40.57c-3.52 0-6.37-2.86-6.37-6.37 0-3.52 2.85-6.37 6.37-6.37h148.57c3.51 0 6.36 2.85 6.36 6.37 0 3.51-2.85 6.37-6.36 6.37H97.79zm0 81.13c-3.52 0-6.37-2.85-6.37-6.37s2.85-6.37 6.37-6.37h104.63c3.51 0 6.37 2.85 6.37 6.37s-2.86 6.37-6.37 6.37H97.79zm0-40.57a6.365 6.365 0 1 1 0-12.73h114.97a6.365 6.365 0 1 1 0 12.73H97.79zm227.12-84.76c0-4.31 1.24-8.3 3.36-11.71h37.7c2.12 3.38 3.35 7.4 3.35 11.71 0 12.26-9.94 22.21-22.2 22.21s-22.21-9.95-22.21-22.21zm86.29.84v4.65c0 4.35-3.55 7.91-7.9 7.91h-8.1a49.25 49.25 0 0 1-4.88 12.88l5.4 5.4c3.07 3.08 3.07 8.11 0 11.18l-6.58 6.59c-3.07 3.07-8.1 3.07-11.18 0l-4.92-4.93c-4.1 2.55-8.59 4.51-13.36 5.78v6.72c0 4.35-3.57 7.91-7.91 7.91h-9.3c-4.35 0-7.91-3.56-7.91-7.91v-6.63a49.3 49.3 0 0 1-13.5-5.73l-4.79 4.79c-3.07 3.07-8.11 3.07-11.18 0l-6.58-6.58c-3.07-3.08-3.07-8.11 0-11.19l5.18-5.17a49.215 49.215 0 0 1-5.01-13.11h-7.74c-4.35 0-7.91-3.56-7.91-7.91v-9.3c0-4.22 3.36-7.7 7.53-7.9h26.48c-1.24 3.4-1.91 7.07-1.91 10.9 0 .56.01 1.11.04 1.65-.03.55-.04 1.1-.04 1.65 0 17.57 14.24 31.82 31.81 31.82s31.82-14.25 31.82-31.82c0-.55-.01-1.1-.05-1.65.04-.54.05-1.09.05-1.65 0-3.83-.68-7.5-1.92-10.9h26.83c4.18.2 7.53 3.68 7.53 7.9v4.65zm-90.26 137.36c2.24 1.97 2.47 5.39.51 7.63a5.412 5.412 0 0 1-7.63.51l-18.53-16.23c-2.24-1.97-2.47-5.39-.51-7.63l.53-.53 18.51-16.21c2.24-1.97 5.66-1.74 7.63.51 1.96 2.24 1.73 5.66-.51 7.63l-13.88 12.16 13.88 12.16zm44.45 8.14a5.412 5.412 0 0 1-7.63-.51c-1.96-2.24-1.73-5.66.51-7.63l13.88-12.16-13.88-12.16c-2.24-1.97-2.47-5.39-.51-7.63 1.97-2.25 5.39-2.48 7.63-.51l18.51 16.21.53.53c1.96 2.24 1.73 5.66-.52 7.63l-18.52 16.23zm72.04-188.25H73.49V256.7h363.94V37.28zM117.67 14.45c2.99 0 5.4 2.42 5.4 5.4 0 2.98-2.41 5.4-5.4 5.4-2.98 0-5.4-2.42-5.4-5.4 0-2.98 2.42-5.4 5.4-5.4zm-18.87 0c2.98 0 5.39 2.42 5.39 5.4 0 2.98-2.41 5.4-5.39 5.4-2.99 0-5.41-2.42-5.41-5.4 0-2.98 2.42-5.4 5.41-5.4zm-18.88 0c2.98 0 5.4 2.42 5.4 5.4 0 2.98-2.42 5.4-5.4 5.4-2.99 0-5.4-2.42-5.4-5.4 0-2.98 2.41-5.4 5.4-5.4zm161.35 259.51h29.46c2.76 0 5.02 2.26 5.02 5.02s-2.26 5.02-5.02 5.02h-29.46c-2.76 0-5.02-2.26-5.02-5.02s2.26-5.02 5.02-5.02z"/>
+                    </svg>
                 </a>
 
             </article>
@@ -143,13 +150,10 @@
             <button class="app_color_button col-6" link_scroll_to="section_2">
                 Lenguajes
             </button>
-            <!-- <button class="hex_app_button" link_scroll_to="section_2">
-                <i data_icon_name="arrow_down"></i>
-            </button>
-             -->
 
         </section>
         <div class="divider"></div>
+        
         <section class="row justify-content-center bg_gray_dark">
             <h2 class="text-center py-5">Centro San Luis</h2>
             <p class="p-5">
@@ -157,16 +161,101 @@
 
                 Ethazi es un modelo de aprendizaje basado en retos, en cual se presenta los alumnos un problema o proyecto, y durante el proceso de resolución del mismo he tenido la oportunidad de desarrollar tanto competencias tanto técnicas como transversales. 
             </p>
+
             <button class="app_color_button col-8 m-5">
                 2º DAW 2023-2024
             </button>
-            <img class="p-0 overflow_img"
-            src="../public/img/csl_1.jpeg" alt="">
+            
+            <img class="p-0 overflow_img" src="../public/img/csl_1.jpeg" alt="">
+
             <div class="divider"></div>
         </section>
-        
-        
+        <section class="row py-5 gy-5">
+            <h2 class="text-center py-5">Competencias transversales</h2>
+            <p class="p-5">
+                Estas son algunas de las competencias transversales que se darrollan con el modelo de aprendizaje Ethazi:
+            </p>
+
+            <div class="carta_index bg_gray_dark">
+                <div>
+                    <img src="../public/img/index/organizar.jpg" alt="Organización del trabajo">
+                </div>
+
+                <div class="pt-3 carta_index_info bg_main">
+                    <div class="carta_index_title bg_gray_dark">
+                        <h3 class="px-4 pb-4 pt-5 medium ">Compromiso</h3>
+                    </div>
+                    <p class="p-4 py-3 bg_gray_dark">
+                        Comprometerse a entregar un producto en buenas condiciones y de buena voluntad.
+                    </p>
+                </div>
+            </div>
+
+            <div class="carta_index bg_gray_dark">
+                <div>
+                    <img src="../public/img/index/equipo.jpg" alt="Organización del trabajo">
+                </div>
+
+                <div class="pt-3 carta_index_info bg_main">
+                    <div class="carta_index_title bg_gray_dark">
+                        <h3 class="px-4 pb-4 pt-5 medium">Trabajo En equipo</h3>
+                    </div>
+                    <p class="p-4 py-3 bg_gray_dark">
+                        Es necesario la participación y el debate en equipos, para dar solución los problemas que se nos plantean.
+                    </p>
+                </div>
+            </div>
+
+            <div class="carta_index bg_gray_dark">
+                <div>
+                    <img src="../public/img/index/reflex.jpg" alt="Organización del trabajo">
+                </div>
+
+                <div class="pt-3 carta_index_info bg_main">
+                    <div class="carta_index_title bg_gray_dark">
+                        <h3 class="px-4 pb-4 pt-5 medium">Reflexión</h3>
+                    </div>
+                    <p class="p-4 py-3 bg_gray_dark">
+                        Retrospectiva sobre el trabajo realizado, qué aprendimos y qué podemos mejorar.
+                    </p>
+                </div>
+            </div>
+        </section>
     </main>
+    <footer class="container-fluid flex_center flex-column">
+        <div class="divider_blue"></div>
+
+        <div class="p-5 flex_center gap-4">
+            <h2 class="bold">Rivo Molina</h2> 
+            <!-- <button class="hex_app_button" link_scroll_to="section_2">
+                <i data_icon_name="arrow_up"></i>
+            </button> -->
+            <button class="hex_app_button" onclick="goToTop()">
+                <i data_icon_name="arrow_up"></i>
+            </button>
+            
+        </div>
+        
+        <div class="flex-column flex_center gap-3 pb-5">
+            <a href="#"><h3 class="extralight">Competencias</h3></a>
+            <a href="#"><h3 class="extralight">Estudios</h3></a>
+            <a href="#"><h3 class="extralight">Proyectos</h3></a>
+            <a href="#"><h3 class="extralight">Sobre mí</h3></a>
+        </div>
+        
+        <h2 class="bold pb-3">Contacto</h2>
+        <div id="contacto_container" class="light flex-row flex_center gap-5 pb-5">
+            <a href="mailto:rivojosemolina@hotmail.com" style="scale: 1.15 1;" target="_blank">
+                <i class="ri-mail-line"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/rivo-molina-78849b1b9/" target="_blank">
+                <i class="ri-linkedin-box-line"></i>
+            </a>
+            <a href="https://github.com/Riv0J" target="_blank">
+                <i class="ri-github-fill"></i>
+            </a>
+        </div>        
+    </footer>
 </body>
 <script src="../public/js/Icons.js"></script>
 <script src="../public/js/portfolio.js"></script>
@@ -175,9 +264,4 @@
         initPortfolio();
     });
 </script>
-<link rel="stylesheet" href="../font-awesome-4.7.0/css/font-awesome.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.2.0/fonts/remixicon.css" rel="stylesheet">
-
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;200;300;400;500;600;700;800;900&family=Montserrat:wght@300&family=Outfit&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,800;0,900;1,500;1,600;1,700&family=Roboto&family=Varela+Round&display=swap" rel="stylesheet">
 </html>
