--- a/view/index.html
+++ b/view/index.html
@@ -24,7 +24,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
     <!-- Jquery JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 
     <!-- Normalize CSS -->
@@ -35,45 +35,37 @@
     <link rel="stylesheet" href="../public/css/index.css">
 </head>
 <body>
-    <header id="nav" class="fixed-top d-flex justify-content-between px-3 py-2">
-        <aside>
-            <a href="" id="nombre" class="d-flex flex-row align-items-center justify-content-start app_hover
-            ">
-                <div id="logo" class="halo d-flex align-items-center justify-content-center">
-                    <svg class="app_svg app_hover" fill="#000000" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="800px" height="800px" viewBox="0 0 485.688 485.688" xml:space="preserve">
-                        <g>
+    <header class="fixed-top">
+        <div id="responsive_header" class="d-flex flex-row justify-content-between px-3 py-2">
+            <aside>
+                <a href="index.html" id="nombre" class="d-flex flex-row align-items-center justify-content-start app_hover">
+                    <div id="logo" class="halo d-flex align-items-center justify-content-center">
+                        <svg class="app_svg app_hover" viewBox="0 0 485.688 485.688">
                             <g>
-                                <path d="M364.269,453.155H121.416L0,242.844L121.416,32.533h242.853l121.419,210.312L364.269,453.155z M131.905,434.997h221.878
-                                    l110.939-192.152L353.783,50.691H131.905L20.966,242.844L131.905,434.997z"/>
+                                <g>
+                                    <path d="M364.269,453.155H121.416L0,242.844L121.416,32.533h242.853l121.419,210.312L364.269,453.155z M131.905,434.997h221.878
+                                        l110.939-192.152L353.783,50.691H131.905L20.966,242.844L131.905,434.997z"/>
+                                </g>
                             </g>
-                        </g>
-                    </svg>
-                    <div class="image_container"></div>
-                </div>
-                Rivo José · Portfolio
-            </a>
-        </aside>
-        <!-- <div id="desktop_menu">
-            <button class="desplegable">
-                <a href="#" class="deplegable_titulo icon_title app_hover">Mis estudios
-                    <i data_icon_name="arrow_up"></i>
+                        </svg>
+                        <div class="image_container"></div>
+                    </div>
+                    Rivo José · Portfolio
                 </a>
-                <div class="desplegable_options">
-                    <a class="desplegable_option app_hover siglas" href=""> DAW 1</a>
-                    <a class="desplegable_option app_hover siglas" href=""> DAW 2</a>
-                    <a class="desplegable_option app_hover" href=""> Otros estudios</a>
-                </div>
+            </aside>
+            <button id="responsive_menu_button" class="flex_center app_hover">
+                <i data_icon_name="burger_menu"></i>
             </button>
-            <a class="" href="./sobre_mi.html">
-                <div class="deplegable_titulo app_hover">Mis proyectos</div>
-                <polygon fill="#213C45" points="180.745,294.673 189.226,299.762 216.677,299.762 216.677,103.068 180.745,124.628   " />
-            </a>
-        </div> -->
-        <button id="responsive_menu_button" class="centered_elements app_hover">
-            <i data_icon_name="burger_menu"></i>
-        </button>
+        </div>
+
+        <nav id="responsive_nav" class="d-flex flex-column">
+            <a href="estudios.html"><h3 class="text-left regular px-4 py-2">Estudios</h3></a>
+            <a href="#"><h3 class="text-left regular px-4 py-2">Competencias</h3></a>
+            <a href="#"><h3 class="text-left regular px-4 py-2">Proyectos</h3></a>
+            <a href="#"><h3 class="text-left regular px-4 py-2">Sobre mí</h3></a>
+        </nav>
     </header>
-    
+
     <main class="container-fluid d-flex flex-column justify-content-center align-items-center">  
 
         <section class="row py-5">
@@ -83,11 +75,11 @@
                     <h2 class="code_reveal_effect">Rivo José</h2>
                 </div>
 
-                <div class="profile_window">
-                    <div class="portrait"></div>
+                <div class="my-5 bg_main hexagon_clip">
+                    <div class="profile_window hexagon_clip"></div>
                 </div>
 
-                <h4 class="py-4 px-5 text-center">Desarrollador de aplicaciones web</h4>
+                <h4 class="px-5 text-center">Desarrollador de aplicaciones web</h4>
             </article>
             <!-- <article class="text_container">
                 <div class="hex_text_container text_content_box">
@@ -117,7 +109,7 @@
             <h2 class="text-center py-5">Competencias</h2>
 
             <article class="row g-0 px-5">
-                <a href="#" class="col-6 text-center p-3 pb-5">
+                <a href="#" class="col-6 text-center p-3 pb-5 container_hover">
                     <h3 class="pb-3">Lenguaje de marca</h3>
                     <svg style="scale: 0.85;"
                         viewBox="0 0 512 512">
@@ -126,19 +118,20 @@
                         />
                     </svg>
                 </a>
-                <a href="#" class="col-6 text-center p-3 pb-5">
+                <a href="#" class="col-6 text-center p-3 pb-5 container_hover">
                     <h3 class="pb-4">Interfaces Web</h3>
-                    <svg viewBox="0 0 122.88 101.9">
+                    <svg style="scale: 0.85;" viewBox="0 0 122.88 101.9">
                         <path d="M3.34,0h116.2a3.35,3.35,0,0,1,3.34,3.34v77a3.35,3.35,0,0,1-3.34,3.34H3.34A3.35,3.35,0,0,1,0,80.32v-77A3.35,3.35,0,0,1,3.34,0Zm46,62.5h.12l3.17-1.83a.22.22,0,0,0,.05-.08.08.08,0,0,0,0-.07l-3.47-6h0a.44.44,0,0,1-.06-.16.55.55,0,0,1,.43-.66l5.1-1.06h0a2.73,2.73,0,0,0,1.06-.44.65.65,0,0,0,.23-.29.25.25,0,0,0,0-.2,1.44,1.44,0,0,0-.45-.44L38.23,39.34l1.61,20.91a1.44,1.44,0,0,0,.15.61.26.26,0,0,0,.17.13.64.64,0,0,0,.36-.06,2.58,2.58,0,0,0,.91-.69l3.47-3.9h0a.53.53,0,0,1,.14-.12.57.57,0,0,1,.77.21l3.5,6a.09.09,0,0,0,.06,0Zm-30.77-39a1.29,1.29,0,0,0-1.29,1.42v2.69a1.29,1.29,0,0,0,2.2.92,1.26,1.26,0,0,0,.39-.92V26h1.29a1.29,1.29,0,1,0,0-2.58Zm1.29,9.28a1.29,1.29,0,0,0-2.2-.92,1.26,1.26,0,0,0-.39.92v2.59a1.29,1.29,0,0,0,2.2.92,1.26,1.26,0,0,0,.39-.92V32.74Zm0,7.76a1.3,1.3,0,0,0-2.2-.93,1.29,1.29,0,0,0-.39.93v2.58a1.3,1.3,0,0,0,2.2.93,1.29,1.29,0,0,0,.39-.93V40.5Zm0,7.75a1.3,1.3,0,0,0-2.2-.92,1.28,1.28,0,0,0-.39.92v2.59a1.3,1.3,0,1,0,2.59,0V48.25Zm0,7.76a1.29,1.29,0,0,0-2.2-.92,1.26,1.26,0,0,0-.39.92v2.36a1.3,1.3,0,0,0,1.3,1.35h.17a1.3,1.3,0,0,0,1.12-1.95V56Zm4.05,1.12a1.29,1.29,0,0,0-.92,2.2,1.26,1.26,0,0,0,.92.39h2.59a1.3,1.3,0,0,0,.92-2.2,1.26,1.26,0,0,0-.92-.39Zm7.76,0a1.3,1.3,0,0,0-.93,2.2,1.29,1.29,0,0,0,.93.39h2.58a1.66,1.66,0,0,0,.33,0l-.19-2.54H31.7ZM51,40.21a1.3,1.3,0,0,0,2.2.92,1.26,1.26,0,0,0,.39-.92V37.62a1.29,1.29,0,0,0-2.2-.92,1.26,1.26,0,0,0-.39.92v2.59Zm0-7.76a1.3,1.3,0,1,0,2.59,0V29.86a1.3,1.3,0,0,0-2.2-.92,1.28,1.28,0,0,0-.39.92v2.59ZM52.21,26a1.29,1.29,0,0,0,.92-2.19,1.26,1.26,0,0,0-.92-.39H49.62a1.29,1.29,0,0,0-.92,2.19,1.26,1.26,0,0,0,.92.39Zm-7.76,0a1.29,1.29,0,1,0,0-2.58H41.87a1.29,1.29,0,1,0,0,2.58ZM36.7,26a1.29,1.29,0,0,0,0-2.58H34.11a1.29,1.29,0,1,0,0,2.58Zm-7.76,0a1.29,1.29,0,0,0,.92-2.19,1.26,1.26,0,0,0-.92-.39H26.35a1.29,1.29,0,0,0-.92,2.19,1.26,1.26,0,0,0,.92.39ZM83,73.79c-.1-19.54-1.46-43.19,0-62.14H4.38V70.84a3,3,0,0,0,3,3Zm8.26-52.13a1.51,1.51,0,1,1,0-3h20.36a1.51,1.51,0,1,1,0,3Zm1.95,38.18h16.46A4.13,4.13,0,0,1,113.79,64h0a4.14,4.14,0,0,1-4.12,4.13H93.21A4.14,4.14,0,0,1,89.09,64h0a4.13,4.13,0,0,1,4.12-4.12Zm-2-6.91a1.51,1.51,0,0,1,0-3h20.48a1.51,1.51,0,0,1,0,3Zm.37-10.42a1.51,1.51,0,1,1,0-3h19.74a1.51,1.51,0,0,1,0,3Zm-.39-10.42a1.51,1.51,0,1,1,0-3H111.7a1.51,1.51,0,0,1,0,3Zm26.11,41.13V12.37H85.59V73.79h30a2.87,2.87,0,0,0,1.73-.57Zm-71,15h30.3c.08,5.24,2.24,9.94,8.09,13.63H38.2c4.71-3.41,8.11-7.54,8.09-13.63ZM113.8,4.92a2,2,0,1,1-2,2,2,2,0,0,1,2-2Zm-13.44,0a2,2,0,1,1-2,2,2,2,0,0,1,2-2Zm6.72,0a2,2,0,1,1-2,2,2,2,0,0,1,2-2Z"/>
                     </svg>
                 </a>
-                <a href="#" class="col-6 text-center p-3 pb-5">
-                    <h3 class="pb-4">Bases de datos</h3>
-                    <svg viewBox="0 0 60 60">
-                        <path d="M57,32H44V7c0-4.6-11.067-7-22-7S0,2.4,0,7V45c0,4.265,9.9,6.693,20,6.97V57a3,3,0,0,0,3,3H57a3,3,0,0,0,3-3V35A3,3,0,0,0,57,32ZM22,2C34.209,2,42,4.961,42,7s-7.791,5-20,5S2,9.039,2,7,9.791,2,22,2ZM2,10.1C5.674,12.67,13.872,14,22,14s16.326-1.33,20-3.9V20c0,2.039-7.791,5-20,5S2,22.039,2,20Zm0,13C5.674,25.67,13.872,27,22,27s16.326-1.33,20-3.9V32H23a3,3,0,0,0-3,3v2.965C8.828,37.66,2,34.92,2,33ZM2,45V36.116c3.443,2.407,10.817,3.664,18,3.857v9.989C8.828,49.656,2,46.918,2,45ZM58,57a1,1,0,0,1-1,1H23a1,1,0,0,1-1-1V35a1,1,0,0,1,1-1H57a1,1,0,0,1,1,1Z"/><path d="M40,39a4,4,0,0,0-4,4v6a4,4,0,0,0,4,4,3.947,3.947,0,0,0,2.019-.567l.274.274a1,1,0,0,0,1.414-1.414l-.274-.274A3.947,3.947,0,0,0,44,49V43A4,4,0,0,0,40,39Zm1.707,10.293a1,1,0,0,0-1.414,1.414l.218.218A1.96,1.96,0,0,1,40,51a2,2,0,0,1-2-2V43a2,2,0,0,1,4,0v6a1.96,1.96,0,0,1-.075.511Z"/><path d="M30,41a2,2,0,0,1,2,2,1,1,0,0,0,2,0,4,4,0,1,0-4,4,2,2,0,1,1-2,2,1,1,0,0,0-2,0,4,4,0,1,0,4-4,2,2,0,0,1,0-4Z"/><path d="M53,51H48V40a1,1,0,0,0-2,0V52a1,1,0,0,0,1,1h6a1,1,0,0,0,0-2Z"/>
+                <a href="#" class="col-6 text-center p-3 pb-5 container_hover">
+                    <h3 class="pb-3" >Bases de datos</h3>
+                    <svg style="scale: 0.85;" viewBox="0 0 94 98">
+                        <path d="M73.2658 53.2392C84.7153 53.2392 93.9985 62.9636 93.9985 74.9574C93.9985 86.9512 84.7153 96.6756 73.2658 96.6756C61.8163 96.6756 52.5331 86.9512 52.5331 74.9574C52.5331 62.9636 61.8163 53.2392 73.2658 53.2392ZM61.3205 74.438H68.9713V87.079H77.5984V74.438H85.4705L73.4031 62.1406L61.3205 74.438ZM13.7604 22.2121C19.939 24.3775 28.5433 25.7119 38.1011 25.7119C47.6589 25.7119 56.2632 24.3775 62.4418 22.2121C67.8652 20.3183 71.2215 18.017 71.2215 15.7717C71.2215 13.5264 67.8652 11.2251 62.4418 9.33135C56.2632 7.17392 47.6589 5.83151 38.1011 5.83151C28.5433 5.83151 19.939 7.16593 13.7604 9.33135C2.24986 13.3586 1.92949 18.081 13.7604 22.2121ZM5.02642 39.1439C5.45359 41.2375 8.71071 43.347 13.7604 45.1129C19.939 47.2783 28.5433 48.6127 38.1011 48.6127C47.6589 48.6127 56.2632 47.2783 62.4418 45.1129C67.8652 43.2191 71.2215 40.9178 71.2215 38.6725H71.2444V23.2508C69.3145 24.6332 66.8355 25.8557 63.9292 26.8705C57.27 29.1958 48.1318 30.642 38.1011 30.642C28.0627 30.642 18.9321 29.2037 12.2729 26.8705C9.39722 25.8637 6.94866 24.6651 5.03405 23.2988V39.1439H5.02642ZM48.5513 74.8455C45.2332 75.1971 41.7243 75.3809 38.1011 75.3809C28.0627 75.3809 18.9321 73.9426 12.2729 71.6094C9.39722 70.6026 6.94866 69.404 5.03405 68.0376V82.8121C5.46122 84.9056 8.71834 87.0151 13.768 88.781C19.9466 90.9384 28.5509 92.2808 38.1087 92.2808C43.8449 92.2808 49.2302 91.8014 53.9595 90.9464C55.1495 92.4966 56.4996 93.9029 57.9947 95.1334C52.2509 96.4519 45.4163 97.211 38.1087 97.211C28.0704 97.211 18.9397 95.7727 12.2806 93.4394C8.77173 92.2089 0.327625 88.1817 0.327625 83.3554C0.327625 82.7881 0.327625 82.3167 0.327625 81.7733C0.312369 59.7834 0.266602 37.7776 0.266602 15.7717C0.266602 11.1692 4.85098 7.26181 12.2653 4.6649C18.9245 2.33966 28.0627 0.901367 38.1011 0.901367C48.1394 0.901367 57.27 2.33966 63.9292 4.67289C70.6799 7.03009 75.0812 10.482 75.8212 14.5571C75.9127 14.8128 75.9585 15.0925 75.9585 15.3882V49.2439C75.0431 49.1321 74.1125 49.0761 73.1666 49.0761C72.5183 49.0761 71.8851 49.1001 71.252 49.156V46.1676C69.3222 47.55 66.8431 48.7725 63.9369 49.7873C57.2777 52.1125 48.1394 53.5588 38.1087 53.5588C28.0704 53.5588 18.9397 52.1205 12.2806 49.7873C9.40485 48.7805 6.95629 47.5819 5.04168 46.2155V60.99C5.46884 63.0835 8.72596 65.193 13.7756 66.9589C19.9543 69.1163 28.5586 70.4587 38.1163 70.4587C41.9379 70.4587 45.607 70.243 49.0319 69.8515C48.7115 71.4576 48.5513 73.1356 48.5513 74.8455Z"/>
                     </svg>
+                        
                 </a>
-                <a href="#" class="col-6 text-center p-3 pb-5">
+                <a href="#" class="col-6 text-center p-3 pb-5 container_hover">
                     <h3 class="pb-5">Entorno servidor</h3>
                     <svg style="scale: 1.2;" viewBox="0 0 512 293.45">
                         <path d="M12.93 267.59h47.76c-1.56-1.62-2.53-3.81-2.53-6.22V8.97C58.16 4.04 62.2 0 67.13 0h375.38c4.93 0 8.97 4.04 8.97 8.97v252.4c0 2.41-.97 4.6-2.53 6.22h50.12c3.56 0 6.8 1.45 9.14 3.79a12.903 12.903 0 0 1 0 18.27c-2.34 2.34-5.58 3.8-9.14 3.8H12.93c-3.56 0-6.8-1.46-9.14-3.8a12.903 12.903 0 0 1 0-18.27c2.34-2.34 5.58-3.79 9.14-3.79zM339 181.33c.67-2.91 3.59-4.72 6.5-4.05 2.91.68 4.72 3.59 4.05 6.51l-10.59 45.34a5.412 5.412 0 0 1-6.5 4.04 5.406 5.406 0 0 1-4.05-6.5L339 181.33zM97.79 82.82c-3.52 0-6.37-2.85-6.37-6.37 0-3.51 2.85-6.37 6.37-6.37h160.46c3.51 0 6.36 2.86 6.36 6.37 0 3.52-2.85 6.37-6.36 6.37H97.79zm0 40.57c-3.52 0-6.37-2.86-6.37-6.37 0-3.52 2.85-6.37 6.37-6.37h148.57c3.51 0 6.36 2.85 6.36 6.37 0 3.51-2.85 6.37-6.36 6.37H97.79zm0 81.13c-3.52 0-6.37-2.85-6.37-6.37s2.85-6.37 6.37-6.37h104.63c3.51 0 6.37 2.85 6.37 6.37s-2.86 6.37-6.37 6.37H97.79zm0-40.57a6.365 6.365 0 1 1 0-12.73h114.97a6.365 6.365 0 1 1 0 12.73H97.79zm227.12-84.76c0-4.31 1.24-8.3 3.36-11.71h37.7c2.12 3.38 3.35 7.4 3.35 11.71 0 12.26-9.94 22.21-22.2 22.21s-22.21-9.95-22.21-22.21zm86.29.84v4.65c0 4.35-3.55 7.91-7.9 7.91h-8.1a49.25 49.25 0 0 1-4.88 12.88l5.4 5.4c3.07 3.08 3.07 8.11 0 11.18l-6.58 6.59c-3.07 3.07-8.1 3.07-11.18 0l-4.92-4.93c-4.1 2.55-8.59 4.51-13.36 5.78v6.72c0 4.35-3.57 7.91-7.91 7.91h-9.3c-4.35 0-7.91-3.56-7.91-7.91v-6.63a49.3 49.3 0 0 1-13.5-5.73l-4.79 4.79c-3.07 3.07-8.11 3.07-11.18 0l-6.58-6.58c-3.07-3.08-3.07-8.11 0-11.19l5.18-5.17a49.215 49.215 0 0 1-5.01-13.11h-7.74c-4.35 0-7.91-3.56-7.91-7.91v-9.3c0-4.22 3.36-7.7 7.53-7.9h26.48c-1.24 3.4-1.91 7.07-1.91 10.9 0 .56.01 1.11.04 1.65-.03.55-.04 1.1-.04 1.65 0 17.57 14.24 31.82 31.81 31.82s31.82-14.25 31.82-31.82c0-.55-.01-1.1-.05-1.65.04-.54.05-1.09.05-1.65 0-3.83-.68-7.5-1.92-10.9h26.83c4.18.2 7.53 3.68 7.53 7.9v4.65zm-90.26 137.36c2.24 1.97 2.47 5.39.51 7.63a5.412 5.412 0 0 1-7.63.51l-18.53-16.23c-2.24-1.97-2.47-5.39-.51-7.63l.53-.53 18.51-16.21c2.24-1.97 5.66-1.74 7.63.51 1.96 2.24 1.73 5.66-.51 7.63l-13.88 12.16 13.88 12.16zm44.45 8.14a5.412 5.412 0 0 1-7.63-.51c-1.96-2.24-1.73-5.66.51-7.63l13.88-12.16-13.88-12.16c-2.24-1.97-2.47-5.39-.51-7.63 1.97-2.25 5.39-2.48 7.63-.51l18.51 16.21.53.53c1.96 2.24 1.73 5.66-.52 7.63l-18.52 16.23zm72.04-188.25H73.49V256.7h363.94V37.28zM117.67 14.45c2.99 0 5.4 2.42 5.4 5.4 0 2.98-2.41 5.4-5.4 5.4-2.98 0-5.4-2.42-5.4-5.4 0-2.98 2.42-5.4 5.4-5.4zm-18.87 0c2.98 0 5.39 2.42 5.39 5.4 0 2.98-2.41 5.4-5.39 5.4-2.99 0-5.41-2.42-5.41-5.4 0-2.98 2.42-5.4 5.41-5.4zm-18.88 0c2.98 0 5.4 2.42 5.4 5.4 0 2.98-2.42 5.4-5.4 5.4-2.99 0-5.4-2.42-5.4-5.4 0-2.98 2.41-5.4 5.4-5.4zm161.35 259.51h29.46c2.76 0 5.02 2.26 5.02 5.02s-2.26 5.02-5.02 5.02h-29.46c-2.76 0-5.02-2.26-5.02-5.02s2.26-5.02 5.02-5.02z"/>
@@ -171,7 +164,7 @@
             <div class="divider"></div>
         </section>
         <section class="row py-5 gy-5">
-            <h2 class="text-center py-5">Competencias transversales</h2>
+            <h2 class="text-center p-1 pt-3">Competencias transversales</h2>
             <p class="p-5">
                 Estas son algunas de las competencias transversales que se darrollan con el modelo de aprendizaje Ethazi:
             </p>
@@ -198,7 +191,7 @@
 
                 <div class="pt-3 carta_index_info bg_main">
                     <div class="carta_index_title bg_gray_dark">
-                        <h3 class="px-4 pb-4 pt-5 medium">Trabajo En equipo</h3>
+                        <h3 class="px-4 pb-4 pt-5 medium">Trabajo en equipo</h3>
                     </div>
                     <p class="p-4 py-3 bg_gray_dark">
                         Es necesario la participación y el debate en equipos, para dar solución los problemas que se nos plantean.
@@ -222,6 +215,7 @@
             </div>
         </section>
     </main>
+
     <footer class="container-fluid flex_center flex-column">
         <div class="divider_blue"></div>
 
@@ -237,21 +231,21 @@
         </div>
         
         <div class="flex-column flex_center gap-3 pb-5">
+            <a href="estudios.html"><h3 class="extralight">Estudios</h3></a>
             <a href="#"><h3 class="extralight">Competencias</h3></a>
-            <a href="#"><h3 class="extralight">Estudios</h3></a>
             <a href="#"><h3 class="extralight">Proyectos</h3></a>
             <a href="#"><h3 class="extralight">Sobre mí</h3></a>
         </div>
         
         <h2 class="bold pb-3">Contacto</h2>
         <div id="contacto_container" class="light flex-row flex_center gap-5 pb-5">
-            <a href="mailto:rivojosemolina@hotmail.com" style="scale: 1.15 1;" target="_blank">
+            <a href="mailto:rivojosemolina@hotmail.com" target="_blank" class="container_hover">
                 <i class="ri-mail-line"></i>
             </a>
-            <a href="https://www.linkedin.com/in/rivo-molina-78849b1b9/" target="_blank">
+            <a href="https://www.linkedin.com/in/rivo-molina-78849b1b9/" target="_blank" class="container_hover">
                 <i class="ri-linkedin-box-line"></i>
             </a>
-            <a href="https://github.com/Riv0J" target="_blank">
+            <a href="https://github.com/Riv0J" target="_blank" class="container_hover">
                 <i class="ri-github-fill"></i>
             </a>
         </div>        
