--- a/view/index.html
+++ b/view/index.html
@@ -231,10 +231,10 @@
         </div>
         
         <div class="flex-column flex_center gap-3 pb-5">
-            <a href="estudios.html"><h3 class="extralight">Estudios</h3></a>
-            <a href="#"><h3 class="extralight">Competencias</h3></a>
-            <a href="#"><h3 class="extralight">Proyectos</h3></a>
-            <a href="#"><h3 class="extralight">Sobre mí</h3></a>
+            <a href="estudios.html"><h3 class="extralight text_hover">Estudios</h3></a>
+            <a href="#"><h3 class="extralight text_hover">Competencias</h3></a>
+            <a href="#"><h3 class="extralight text_hover">Proyectos</h3></a>
+            <a href="#"><h3 class="extralight text_hover">Sobre mí</h3></a>
         </div>
         
         <h2 class="bold pb-3">Contacto</h2>
